--- a/index.html
+++ b/index.html
@@ -33,12 +33,13 @@
         <div class="hero-content">
             <h1>¡Hola! Soy Alessandra ✨</h1>
             <p class="subtitle">Ingeniera en Entornos Virtuales y Negocios Digitales 🚀</p>
-            <p>Comprometida con la excelencia, creo experiencias digitales únicas que combinan desarrollo web, videojuegos, realidad virtual y marketing digital. Mi misión es superar las expectativas de cada cliente y transformar ideas en realidades extraordinarias. 💜</p>
+            <p>Con experiencia en desarrollo web, videojuegos y realidad virtual, estoy constantemente ampliando mis conocimientos hacia nuevas áreas para crear experiencias digitales cada vez más completas. Mi misión es superar las expectativas de cada cliente y transformar ideas en realidades extraordinarias. 💜</p>
             <div class="cta-buttons">
                 <a href="#proyectos" class="btn btn-primary">✨ Ver Mis Proyectos</a>
                 <a href="#contacto" class="btn btn-secondary">🚀 Contáctame</a>
             </div>
         </div>
+
     </section>
 
     <section class="section" id="sobre-mi">
@@ -254,4 +255,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
